--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+    "name": "csv2csv",
+    "description": "Csv to Csv converter (proof of concept for symfony-cli-skeleton)",
+    "license": "MIT",
 	"require": {
 	    "symfony/console":                 "2.*",
 	    "symfony/filesystem":              "2.*",
